--- a/Foundation51/Week04-Day01/index.html
+++ b/Foundation51/Week04-Day01/index.html
@@ -19,7 +19,17 @@
                      </div>     
                 </div>
              </div>
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="servece item">1</div>
+                </div>
+                <div class="col-4">
+                    <div class="servece item">2</div>
+                </div>
+                <div class="col-4">
+                    <div class="servece item">3</div>
+                </div>
+            </div>
             <div class="row"></div>
          </div>
     </section>
