--- a/Project/index.html
+++ b/Project/index.html
@@ -51,14 +51,21 @@
     </div>
                                     
 </section>
-    <!-- header section end -->
+
 <section id="slider">
   <div class="slide"></div>
 </section>
 <section>
+    <div class="image"><img src="img/category-banner1.jpg" alt=""></div>
     <div class="image"><img src="img/01-253x308.jpg" alt=""></div>
     <div class="image"><img src="img/02-253x308.jpg" alt=""></div>
-    <div class="image"><img src="img/category-banner1.jpg" alt=""></div>
+    
+</section>
+
+<section>
+    <div class="Top Products">
+    <div class="Products">Top Products</div>
+</div>
 </section>
 </body>
 </html>
