--- a/Project/index.html
+++ b/Project/index.html
@@ -58,9 +58,11 @@
   <div class="slide"></div>
 </section>
 <section id="testimonials">
-    <div class="image"><img src="img/category-banner1.jpg" alt=""></div>
-    <div class="image"><img src="img/01-253x308.jpg" alt=""></div>
-    <div class="image"><img src="img/02-253x308.jpg" alt=""></div>
+    <div class="image-container">
+    <img src="img/category-banner1.jpg" alt="">
+    <img src="img/01-253x308.jpg" alt="">
+    <img src="img/02-253x308.jpg" alt="">
+    </div>
     
 </section>
 
