--- a/Project/index.html
+++ b/Project/index.html
@@ -57,11 +57,22 @@
 <section id="slider">
   <div class="slide"></div>
 </section>
-<section id="testimonials">
+    <!-- header section end -->
+
+<section id="block-container">
     <div class="image-container">
+        <div class="001">
     <img src="img/category-banner1.jpg" alt="">
+    <a href="#">babyshoes</a>
+        </div>  
+        <div class="01"> 
     <img src="img/01-253x308.jpg" alt="">
+    <a href="#">kidsbag</a>
+        </div> 
+    <div class="02">
     <img src="img/02-253x308.jpg" alt="">
+    <a href="#">clhotes</a>
+    </div>
     </div>
     
 </section>
@@ -69,6 +80,13 @@
 <section id="top-products">
     <div class="Top-Products">
     <div class="Products">Top Products</div>
+    <div class="button">
+        <ul>
+<li><a href="#">Latest Product</a></li>
+<li><a href="#">Bestseller Products</a></li>
+<li><a href="#">Special Products</a></li>
+        </ul>
+    </div>
 
     </div>
 </section>
