--- a/Project/index.html
+++ b/Project/index.html
@@ -379,7 +379,7 @@
                 </ul>
             </div>
 
-                <div class="myaccount">
+                <div class="my-account">
                     <h5>My Account </h5>
                     <ul>
                         <li> My Account</li>
