--- a/Foundation51/Week06-Day02/products.html
+++ b/Foundation51/Week06-Day02/products.html
@@ -14,9 +14,12 @@
         <div class="row">
             <div class="col-3">
                 <div class="product">
-                    <div class="photos"></div>
+
+                    <div class="photos">
                         <img src="img/01-253x308.jpg" alt="">
                         
+                    </div> 
+
                     <div class="info">
                         <div class="stars">
                             <i class="far fa-star"></i>
@@ -27,7 +30,12 @@
                         </div>
                     </div>
                     
-                    <div class="social"></div>
+                    <div class="social">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-eye"></i>
+                        <i class="fas fa-stream"></i>
+                        <i class="fas fa-shopping-cart"></i>
+                    </div>
                 </div>
             </div>
             <div class="col-3">
