--- a/Project/index.html
+++ b/Project/index.html
@@ -573,13 +573,13 @@
         <div class="blog-container">
                 <div class="blog-item">
                     <img src="img/blog-6-819x497.jpg" alt="">
-                    <h4>Necessitatibus Saepe Eveniet</h4>
+                    <h4><a href="#">Necessitatibus Saepe Eveniet</a></h4>
                     <p> The standard Lorem Ipsum passage, used since the 1500s"Lorem ipsum dolor sit amet, consectetur adipi..</p>
                 </div>
             
                 <div class="blog-item">
                     <img src="img/blog-5-819x497.jpg" alt="">
-                    <h4>Urna pretium elit mauris cursus</h4>
+                    <h4>Urna pretium elit mauris cursus</h4><a href="#"></a>
                     <p> 1914 translation by H. Rackham"But I must explain to you how all this mistaken idea of denouncing pl..</p>
                 </div>
             
