--- a/Tasks/index.html
+++ b/Tasks/index.html
@@ -65,7 +65,8 @@ Leather Shoes
     <div class="col">
     <div class="b">Fashion</div>
     <div class="c">
-        <img src="img/category-banner-819x200.jpg" alt="">
+        
+<img src="img" alt="">
     </div>
     <div class="d">D</div>
     <div class="e">E</div>
