--- a/Project/page.html
+++ b/Project/page.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/col.css">
+    
+    <link rel="stylesheet" href="css/page.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,14 +16,20 @@
             <div class="container-top-bar">
                 <div class="left">
                  
-                    <div class="language"><a href="language">Language</a></div>
-                    <div class="currency"><a href="currency">$ Currency</a></div>
+                    <div class="language"><a href="#">Language</a>
+                        <i class="fas fa-angle-down"></i>
+                     </div>
+                     <div class="currency"><a href="#">$ Currency</a>
+                          <i class="fas fa-angle-down"></i>
+                     </div>
                 </div>
    
                     <div class="welcome"><p>Welcome To Kidpay Get Free Shipping On Orders Over $99</p></div>
    
-                <div class="right">
-                    <div class="myAccount"><a href="my Account">My Account</a></div>
+                 <div class="right">
+                    <div class="myAccount"><a href="#">My Account</a>
+                        <i class="fas fa-angle-down"></i>
+                    </div>
                 </div>
             </div>
         </div> 
