--- a/Project/index.html
+++ b/Project/index.html
@@ -404,7 +404,8 @@
             New Collection Of 2019
         </p>
         <h1>Buy Kids Dresses</h1>
-        <h3>Contrary To Popular Belief, Lorem Ipsum Is Not Simply Random.It Has Roots In A Piece Of Classical Latin...</h3>
+        <h3>Contrary To Popular Belief, Lorem Ipsum Is Not Simply Random.It<br>
+             Has Roots In A Piece Of Classical Latin...</h3>
         </div>
     </div>
     </section>
@@ -665,13 +666,15 @@
 
     <div class="foot">
 
-        <div class="kidpay">Powered By OpenCart Kidpay Toys Store ©️ 2021
-            <span>Subscribe</span>
+        <div class="kidpay">
+            
+            <div class="toys"><span>Powered By OpenCart Kidpay Toys Store ©️ 2021</span> 
+                 <span>Subscribe</span></div>
         </div>
 
         <div class="mail">
             <input type="email" placeholder="Enter Your Email Address">
-            <a href="#"><i class="fas fa-paper-plane"></i></a>
+            <div class="plane"><i class="fas fa-paper-plane"></i></div>
         </div>  
        
     </div>
