--- a/Tasks/index.html
+++ b/Tasks/index.html
@@ -1,52 +1,36 @@
-.container-f {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+
+
+<!DOCTYPE html>
+<html>
+<head>
+
+<style>
+.btn {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
 }
-.container-f{
-     border: 1px solid red; 
-     box-sizing: border-box;
+​
+.btn:hover {
+  background-color: green;
 }
-
-   
-
-
-div {
-    display: block;
+.button{
+  background-color: blue;
 }
-body {
-    color: #808080;
-    background: #fff;
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 26px;
-}
+</style>
+</head>
+<body>
+​
 
+<button class="btn" style="background-color: green;">1</button>
+<button class="btn">2</button>
+<button class="btn"> < </button>
+<button class="btn"><|</i></button>
 
+​
 
-
-<div class="container-f">
-    <div class="row-f">
-        <div class="col-3">
-            <div class="box">
-                <div class="box-heading">Categories</div>
-
-            </div>
-        </div>
-
-
-        <div class="col-9">
-            <h1>Fashion</h1>
-            <img src="" alt="">
-            <p>Example of category description text</p>
-            <h3>Refine Search</h3>
-            <ul>
-                <li><a href="#">Clothing</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Footwear</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+​
+</body>
