--- a/Project/page1.html
+++ b/Project/page1.html
@@ -132,30 +132,33 @@
                         <button class="calendar"><i class="fas fa-calendar-alt"></i></button>
 
                     </div>
+                    <div class="buttons">
+                        <div class="qty">
+                            Qty
+                            <button style="height: 47px;width: 50px;">1</button>
+                            <button class="button">Add to Cart</button>
 
-                    <div class="qty">
-                        Qty
-                        <button>1</button>
-                        <button class="button">Add to Cart</button>
 
 
-
-                        <div class="social">
-                            <span class="social-item">
+                            <div class="social">
+                                <span class="social-item">
                                             <i class="fas fa-heart"></i>
                                             <span>Add to Wish list</span>
-                            </span>
+                                </span>
 
-                            <span class="social-item">
+                                <span class="social-item">
                                             <i class="fas fa-stream"></i>
                                             <span>Add to Compare</span>
-                            </span>
+                                </span>
 
+                            </div>
                         </div>
+                        <hr>
                         <div class="medya">
-                            <button><a href="#"><i class="fas fa-thumbs-up"></i></a></button>
-                            <button><a href="#"><i class="fab fa-twitter"></i></a></button>
-                            <button><a href="#"><i class="fas fa-plus-square"></i></a></button>
+
+                            <button style="width: 70px; background: #4267b2"><a href="#"><i class="fas fa-thumbs-up"></i></a></button>
+                            <button style="width: 70px; background: #1b95e0"><a href="#"><i class="fab fa-twitter"></i></a></button>
+                            <button style="width: 70px; background: #fe6d4c"><a href="#"><i class="fas fa-plus-square"></i></a></button>
 
                         </div>
                     </div>
@@ -165,5 +168,21 @@
             </div>
 
         </div>
+
+        <div class="col-12">
+            <ul>
+                <li><a href="#" style="background-color: #649a58;color: white; ">Description</a></li>
+                <li><a href="#">Specification</a></li>
+                <li><a href="#">Reviews (1)</a></li>
+            </ul>
+        </div>
+
+        <div class="tab-content">
+            <p>
+                Stop your co-workers in their tracks with the stunning new 30-inch diagonal HP LP3065 Flat Panel Monitor. This flagship monitor features best-in-class performance and presentation features on a huge wide-aspect screen while letting you work as comfortably
+                as possible - you might even forget you're at the office
+            </p>
+        </div>
+
     </div>
     </div>
