--- a/Algorithms/Tasks/content.html
+++ b/Algorithms/Tasks/content.html
@@ -17,35 +17,27 @@
         <div class="slider">
             <div class="slider-frame">
                 <div class="slider-item">
-                    <img src="img/1.jpg" alt="">
+                    <img src="img/01-439x534.jpg" alt="">
                 </div>
                 <div class="slider-item">
-                    <img src="img/2.jpg" alt="">
+                    <img src="img/02-439x534.jpg" alt="">
                 </div>
                 <div class="slider-item">
-                    <img src="img/3.jpg" alt="">
+                    <img src="img/03-439x534.jpg" alt="">
                 </div>
                 <div class="slider-item">
-                    <img src="img/4.jpg" alt="">
+                    <img src="img/04-439x534.jpg" alt="">
                 </div>
                 <div class="slider-item">
-                    <img src="img/5.jpg" alt="">
+                    <img src="img/05-439x534.jpg" alt="">
                 </div>
                 <div class="slider-item">
-                    <img src="img/6.jpg" alt="">
+                    <img src="img/06-439x534.jpg" alt="">
                 </div>
                 <div class="slider-item">
-                    <img src="img/7.jpg" alt="">
+                    <img src="img/07-439x534.jpg" alt="">
                 </div>
-                <div class="slider-item">
-                    <img src="img/8.jpg" alt="">
-                </div>
-                <div class="slider-item">
-                    <img src="img/9.jpg" alt="">
-                </div>
-                <div class="slider-item">
-                    <img src="img/10.jpg" alt="">
-                </div>
+
             </div>
         </div>
         <div class="slider-controls">
