--- a/ProjectFrontEnd/page1.html
+++ b/ProjectFrontEnd/page1.html
@@ -84,7 +84,42 @@
     <div class="container">
         <div class="row">
             <div class="col-5">
-                <img src="img/01-439x534.jpg" alt="">
+                <div class="imgbag">
+                    <img src="img/01-439x534.jpg" alt="">
+                </div>
+                <div class="slider-container">
+                    <div class="sliderArrows">
+                        <div class="btn prevBtn"><i class="fas fa-chevron-left"></i></div>
+                        <div class="btn nextBtn"><i class="fas fa-chevron-right"></i></div>
+                    </div>
+
+                    <div class="slider">
+                        <div class="slider-frame">
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/01-439x534.jpg" alt="">
+                            </div>
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/02-439x534.jpg" alt="">
+                            </div>
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/03-439x534.jpg" alt="">
+                            </div>
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/04-439x534.jpg" alt="">
+                            </div>
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/05-439x534.jpg" alt="">
+                            </div>
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/06-439x534.jpg" alt="">
+                            </div>
+                            <div class="slider-item" onclick='showBigImage(this)'>
+                                <img src="img/07-439x534.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="col-7">
                 <div class="product">
@@ -186,3 +221,8 @@
 
     </div>
     </div>
+
+    <script src="js/app.js"></script>
+</body>
+
+</html>
