--- a/ProjectFrontEnd/index.html
+++ b/ProjectFrontEnd/index.html
@@ -15,13 +15,11 @@
 </head>
 
 <body>
-    <!-- header section start -->
-    <section id="header">
+<!-- Info Bar Section Start -->
+    <section id="top-bar">
+        <div class="container-top-bar">
 
-        <div class="top-bar">
-            <div class="container-top-bar">
                 <div class="left">
-
                     <div class="language"><a href="#">Language</a>
                         <i class="fas fa-angle-down"></i>
                     </div>
@@ -38,38 +36,41 @@
                     <div class="myAccount"><a href="#">My Account</a>
                         <i class="fas fa-angle-down"></i>
                     </div>
-
-
-
                 </div>
-            </div>
+
         </div>
-
-        <div class="header">
-            <div class="container-header">
-                <div class="navbar">
-                    <div class="logo">
-                        <img src="img/logo.png" alt="">
-                    </div>
-
-                    <div class="nav">
-                        <ul>
-                            <li><a href="1">Fashion</a></li>
-                            <li><a href="2">Clothing</a></li>
-                            <li><a href="3">Footwear</a></li>
-                            <li><a href="4">Western</a></li>
-                            <li><a href="5">Shoes</a></li>
-                            <li><a href="6">More</a></li>
-                        </ul>
-                        <div class="search"><a href="#"><i class="fas fa-search"></i></a></div>
-                        <div class="basket"><a href="#"><i class="fas fa-shopping-basket"></i></a></div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
     </section>
+<!-- Info Bar Section End --> 
+
+<!-- Navbar Section Start -->
+    <section id="navbar">
+        <div class="container-navbar">
+
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+            </div>
+
+            <div class="nav">
+                 <ul>
+                     <li><a href="1">Fashion</a></li>
+                     <li><a href="2">Clothing</a></li>
+                     <li><a href="3">Footwear</a></li>
+                     <li><a href="4">Western</a></li>
+                     <li><a href="5">Shoes</a></li>
+                     <li><a href="6">More</a></li>
+                 </ul>
+            </div> 
+
+           
+                 <div class="search"><a href="#"><i class="fas fa-search"></i></a></div>
+                 <div class="card-btn"></div>
+                 <div class="basket"><a href="#"><i class="fas fa-shopping-basket"></i></a></div>
+                 <button class="btn-z">0</button>       
+            </div>
+
+        </div>
+     </section>
+<!-- Navbar Section End -->    
 
     <section id="slider">
         <div class="sliderArrows">
