--- a/ProjectFrontEnd/MyPortfolio/index.html
+++ b/ProjectFrontEnd/MyPortfolio/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,26 +15,36 @@
 <!-- Home Section Starts -->
     <section id="home">
         <div class="container-home">
-<div class="navbar">
-    <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <li><a href="#">BLOG</a></li>
-    </ul>
-</div>
-<div class="IM">
-    <h3>HI THERE!</h3>
-    <H1>I'M <SPan style="color: yellow;">A FREELANCER</SPan></H1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error quas sed recusandae modi eos minima, similique officiis numquam in voluptas iure eum possimus perspiciatis unde quisquam veniam expedita! Officiis, nihil?</p>
-<div class="btn">
-    <button>MORE ABOUT ME!</button>
-    <BUtton>PORTFOLIO</BUtton>
-</div>
-</div>
-        </div>
-    </section>
+          <div class="navbar">
+                <div class="bars">
+                    <a href="#"><i class="fas fa-bars"></i></a>
+                    <a href="#"><i class="fas fa-times"></i></a>
+                </div>
+            <div class="navbar-nav">
+             <ul>
+                <li class="active"><i class="fas fa-home"></i><a href="#">HOME</a></li>
+                <li><i class="fas fa-user"></i><a href="#">ABOUT</a></li>
+                <li><i class="fa fa-briefcase"></i><a href="#">PORTFOLIO</a></li>
+                <li><i class="fa fa-envelope-open"></i><a href="#">CONTACT</a></li>
+                <li><i class="fa fa-comments"></i><a href="#">BLOG</a></li>
+             </ul>
+            </div>
+         </div>
+
+         <div class="freelancer">
+            <div class="IM">
+                <h3>HI THERE!</h3>
+                <h1>I'M <SPan style="color: yellow;">A FREELANCER</SPan></H1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error quas sed recusandae modi eos minima, similique officiis numquam in voluptas iure eum possimus perspiciatis unde quisquam veniam expedita! Officiis, nihil?</p>
+            </div>
+
+            <div class="btn">
+                <button>MORE ABOUT ME!</button>
+                <button>PORTFOLIO</button>
+            </div>
+         </div>    
+       </div>
+   </section>
 <!-- Home Section End -->
 </body>
 </html>
