--- a/ProjectFrontEnd/Kidpay/index.html
+++ b/ProjectFrontEnd/Kidpay/index.html
@@ -63,9 +63,11 @@
 
            
                  <div class="search"><a href="#"><i class="fas fa-search"></i></a></div>
-                 <div class="card-btn"></div>
+
+             <div class="cart-basket">
                  <div class="basket"><a href="#"><i class="fas fa-shopping-basket"></i></a></div>
-                 <button class="btn-z">0</button>       
+                 <button class="btn-z">0</button>  
+             </div>     
             </div>
 
         </div>
