--- a/ProjectFrontEnd/MyPortfolio/index.html
+++ b/ProjectFrontEnd/MyPortfolio/index.html
@@ -46,5 +46,8 @@
        </div>
    </section>
 <!-- Home Section End -->
+<script>
+    <button type="button" onclick='document.getElementById("bars").innerHTML = "Hello JavaScript!"'>   <a href="#"><i class="fas fa-times"></i></a></button>
+</script>
 </body>
 </html>
