--- a/Algorithms/Tasks-2/button.html
+++ b/Algorithms/Tasks-2/button.html
@@ -89,8 +89,9 @@
         }
         
         .dropdown-content {
-            display: none;
+            /* display: none; */
             position: absolute;
+            top: 102px;
             background-color: #f9f9f9;
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
@@ -119,17 +120,13 @@
                 <div class="nav">
 
                     <ul>
-                        <div class="dropdown">
-
-                            <button class="dropbtn" style="border: none; background-color: inherit;">Fashion </button>
-
+                        <li><a href="1">Fashion</a>
                             <div class="dropdown-content">
                                 <a href="#">Link 1</a>
                                 <a href="#">Link 2</a>
                                 <a href="#">Link 3</a>
                             </div>
-                        </div>
-                        <li><a href="1">Fashion</a></li>
+                        </li>
 
 
                         <li><a href="2">Clothing</a></li>
