--- a/Works/Javascript/index.html
+++ b/Works/Javascript/index.html
@@ -5,10 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/Works/Javascript/app.js"></script>
 </head>
 <body>
     <script>
-   
+//    let salam=false
+//    if (salam){
+//        document.write("problem yoxdur");
+//    }
+//    else{
+//        document.write("varrr");
+//    }
+
+//    let num=10;
+//    if(num==10){
+//        document.write('duzdur')
+//    }
+//    else{
+//        document.write("sehv")
+//    }
+// let yas=10;
+// if (yas>30){
+//     document.write("1");
+// }
+// else if (yas<30){
+//     document.write("2")
+// }
+// else if(yas==30){
+//     document.write('3')
+// }
+// else{
+//     document.write('sev')
+// }
+let salam=5;
+console.log ( 5 > 10 );
+
+function top (1+15){
+    console.log(top)
+}
     </script>
    
 </body>
