--- a/ProjectFrontEnd/MyPortfolio/index.html
+++ b/ProjectFrontEnd/MyPortfolio/index.html
@@ -18,7 +18,7 @@
           <div class="navbar">
                 <div class="bars">
                     <a href="#"><i class="fas fa-bars"></i></a>
-                    <a href="#"><i class="fas fa-times"></i></a>
+                    <!-- <a href="#"><i class="fas fa-times"></i></a> -->
                 </div>
             <div class="navbar-nav">
              <ul>
@@ -34,20 +34,79 @@
          <div class="freelancer">
             <div class="IM">
                 <h3>HI THERE!</h3>
-                <h1>I'M <SPan style="color: yellow;">A FREELANCER</SPan></H1>
+                <h1>I'M <SPan style="color: yellow;">A FREELANCER</span></h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error quas sed recusandae modi eos minima, similique officiis numquam in voluptas iure eum possimus perspiciatis unde quisquam veniam expedita! Officiis, nihil?</p>
             </div>
 
             <div class="btn">
-                <button>MORE ABOUT ME!</button>
-                <button>PORTFOLIO</button>
+                <button><i class="fas fa-user"></i>MORE ABOUT ME!</button>
+                <button><i class="fas fa-suitcase"></i>PORTFOLIO</button>
             </div>
          </div>    
        </div>
    </section>
 <!-- Home Section End -->
-<script>
-    <button type="button" onclick='document.getElementById("bars").innerHTML = "Hello JavaScript!"'>   <a href="#"><i class="fas fa-times"></i></a></button>
-</script>
+
+<!-- About Section Starts -->
+<section id="about">
+    <div class="container-about">
+        <div class="navbar">
+            <div class="bars">
+                <a href="#"><i class="fas fa-bars"></i></a>
+                <!-- <a href="#"><i class="fas fa-times"></i></a> -->
+            </div>
+            <div class="navbar-nav">
+            <ul>
+              <li class="active"><i class="fas fa-home"></i><a href="#">HOME</a></li>
+              <li><i class="fas fa-user"></i><a href="#">ABOUT</a></li>
+              <li><i class="fa fa-briefcase"></i><a href="#">PORTFOLIO</a></li>
+             <li><i class="fa fa-envelope-open"></i><a href="#">CONTACT</a></li>
+             <li><i class="fa fa-comments"></i><a href="#">BLOG</a></li>
+           </ul>
+           </div>
+      </div>
+<div class="container-text">
+    <h2>ABOUT  <span style="color: yellow;">ME</span></h2>
+<span>-</span><p>I design and code beautiful things, and I love what I do.</p><span>-</span>
+</div>
+<div class="col-12">
+    <div class="image">
+        <img src="img/dark-about.jpg" alt="">
+    </div>
+    <div class="col-6" >
+        <div class="name-work">
+        <div class="name">
+            <ul>
+                <li>FIrst Name <span>Daria</span></li>
+                <li>Last Name <span>Taylor</span></li>
+                <li>Birthday <span>12 iyun 1900</span></li>
+                <li>Nationality <span>English</span></li>
+                <li>Experience <span>7 years</span></li>
+                <li>Address <span>Istanbul</span></li>
+            </ul>
+        </div>
+        <div class="work">
+            <ul>
+                <li>Freelance <span>Available</span></li>
+                <li>Language <span>English</span></li>
+                <li>Phone <span>+18-40-11</span></li>
+                <li>Email <span>man@gmail.com</span></li>
+                <li>Skype <span>Datia.toyler</span></li>
+                <li>Dribble <span>Toyler</span></li>
+            </ul>
+        </div>
+    </div>
+    <div class="cv">
+        <button><i class="fa fa-download"></i>Download Me CV</button>
+    </div>   
+</div>
+</div>
+<div class="exper">
+    eperias
+</div>
+</div>
+</section>   
+
+<!-- About Section End -->
 </body>
 </html>
