--- a/Works/Javascript/index.html
+++ b/Works/Javascript/index.html
@@ -9,39 +9,22 @@
 </head>
 <body>
     <script>
-//    let salam=false
-//    if (salam){
-//        document.write("problem yoxdur");
-//    }
-//    else{
-//        document.write("varrr");
-//    }
+let imtahanBali = 50
 
-//    let num=10;
-//    if(num==10){
-//        document.write('duzdur')
-//    }
-//    else{
-//        document.write("sehv")
-//    }
-// let yas=10;
-// if (yas>30){
-//     document.write("1");
-// }
-// else if (yas<30){
-//     document.write("2")
-// }
-// else if(yas==30){
-//     document.write('3')
-// }
-// else{
-//     document.write('sev')
-// }
-let salam=5;
-console.log ( 5 > 10 );
+// Eger istidaceninin neticesi 50 den kicikdirse ekranda 'Get deden gelsin'
+// Eger deyer 50-85 arasindadirsa ekranda 'Pis deyil'
+// Eger deyer 85 den yuxaridirsa ekranda 'Kisiye salam denen'
 
-function top (1+15){
-    console.log(top)
+console.log()
+
+if (imtahanBali <= 50) {
+    console.log('Get deden gelsin')
+} else if (imtahanBali < 85) {
+    console.log('Pis deyil')
+} else if (imtahanBali < 95) {
+    console.log('Kisiye salam de')
+} else {
+    console.log('Sen dahisen')
 }
     </script>
    
