--- a/Works/Javascript/index.html
+++ b/Works/Javascript/index.html
@@ -1,32 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/Works/Javascript/app.js"></script>
+    <style>
+        .gallery {
+            width: 1000px;
+            margin: 0 auto;
+        }
+
+        .big-image {
+            height: 600px;
+            overflow: hidden;
+        }
+
+        .big-image img {
+            height: 600px;
+            width: 100%;
+            object-fit: cover;
+        }
+
+        .small-images {
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .small-image {
+            height: 150px;
+            cursor: pointer;
+        }
+
+        .small-image img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+        }
+    </style>
 </head>
+
 <body>
-    <script>
-let imtahanBali = 50
-
-// Eger istidaceninin neticesi 50 den kicikdirse ekranda 'Get deden gelsin'
-// Eger deyer 50-85 arasindadirsa ekranda 'Pis deyil'
-// Eger deyer 85 den yuxaridirsa ekranda 'Kisiye salam denen'
-
-console.log()
-
-if (imtahanBali <= 50) {
-    console.log('Get deden gelsin')
-} else if (imtahanBali < 85) {
-    console.log('Pis deyil')
-} else if (imtahanBali < 95) {
-    console.log('Kisiye salam de')
-} else {
-    console.log('Sen dahisen')
-}
-    </script>
-   
+    <div class="gallery">
+        <div class="big-image">
+            <img src="images/1.jpg" alt="">
+        </div>
+        <div class="small-images">
+            <div class="small-image" onclick="changeImage()">
+                <img src="images/2.jpg" alt="">
+            </div>
+            <div class="small-image" onclick="changeImage()">
+                <img src="images/3.jpg" alt="">
+            </div>
+            <div class="small-image" onclick="changeImage()">
+                <img src="images/images (1).jfif" alt="">
+            </div>
+            <div class="small-image" onclick="changeImage()">
+                <img src="images/images (2).jfif" alt="">
+            </div>
+            <div class="small-image" onclick="changeImage()">
+                <img src="images/images (3).jfif" alt="">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
