--- a/ProjectFrontEnd/MyPortfolio/index.html
+++ b/ProjectFrontEnd/MyPortfolio/index.html
@@ -31,14 +31,14 @@
 
          <div class="freelancer">
             <div class="IM">
-                <h3>HI THERE!</h3>
-                <h1>I'M <SPan style="color: yellow;">A FREELANCER</span></h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error quas sed recusandae modi eos minima, similique officiis numquam in voluptas iure eum possimus perspiciatis unde quisquam veniam expedita! Officiis, nihil?</p>
+                <h3 style="font-size: 19px; font-weight: 400;">HI THERE!</h3>
+                <h1 style="margin: 18px 0px 10px;">I'M <SPan style="color: #ffb400;">A FREELANCER</span></h1>
+                <p style="margin: 11px 0 23px;font-size: 16px;line-height: 32px;">I'm a Freelance UI/UX Designer and Developer based in London, England. I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
             </div>
 
             <div class="btn">
-                <button><i class="fas fa-user"></i>MORE ABOUT ME!</button>
-                <button><i class="fas fa-suitcase"></i>PORTFOLIO</button>
+                <a href="about.html"><button style="border: none;" ><i class="fas fa-user"></i>MORE ABOUT ME!</button></a>
+                <a href="portfolio.html"><button style="background-color: transparent;"><i class="fas fa-suitcase"></i>PORTFOLIO</button></a>
             </div>
          </div>    
        </div>
