--- a/ProjectFrontEnd/MyPortfolio/about.html
+++ b/ProjectFrontEnd/MyPortfolio/about.html
@@ -22,7 +22,7 @@
                 <a href="index.html"><i class= "fa fa-home"></i></a> 
                 <a href="about.html"><i class="fa fa-user"></i></a> 
                 <a href="portfolio.html"><i class="fa fa-briefcase"></i></a> 
-                <a href="contact.html"><i class="fa fa-envelope"></i></a>
+                <a href="contact.htmls"><i class="fa fa-envelope"></i></a>
                 <a href="#"><i class="fa fa-comments"></i></a> 
               </div>
       </div>
