--- a/ProjectFrontEnd/MyPortfolio/contact.html
+++ b/ProjectFrontEnd/MyPortfolio/contact.html
@@ -45,9 +45,18 @@
             </div>
             <div class="col-8">
                 <p>If you have any suggestion, project or even you want to say Hello.. please fill out the form below and I will reply you shortly.</p>
-            <input type="text"value="YOUR NAME"><i class="fas fa-user"></i>
-            <input type="emai" value="YOUR EMAIL"><i class="fas fa-envelope"></i> <br>
-            <input type="message" value="YOUR MESSAGE"><i class="fas fa-comments"></i>
+            <div class="input">
+                <div class="col-6">
+                <input type="text"value="YOUR NAME"><i class="fas fa-user"></i>
+            <input type="emai" value="YOUR EMAIL"><i class="fas fa-envelope" style="position: absolute;left: 356px;"></i>
+            
+        </div>
+            <br>
+            <div class="comment">
+           
+            <input type="message" value="YOUR MESSAGE" style="height: 150px;width: 365%;"><i class="fas fa-comments"></i>
+        </div>
+        </div>
             </div>
         </div>
     </div>
