--- a/ProjectFrontEnd/MyPortfolio/portfolio.html
+++ b/ProjectFrontEnd/MyPortfolio/portfolio.html
@@ -22,6 +22,9 @@
         </div>
         <div class="images">
             <img src="img/project-1.jpg" alt="">
+            <div class="overlay">
+                <div class="format">IMAGE FORMAT</div>
+              </div>
             <img src="img/project-2.jpg" alt="">
             <img src="img/project-4.jpg" alt="">
             <img src="img/project-5.jpg" alt="">
