--- a/ProjectFrontEnd/MyPortfolio/about.html
+++ b/ProjectFrontEnd/MyPortfolio/about.html
@@ -67,40 +67,46 @@
 <div class="container-edu">
     <div class="row" >
 <div class="col-6">
-    <h2>EXPERIENCE</h2>
+    <h2 style="padding: 30px 0px;">EXPERIENCE</h2>
     
 <div class="item">
-    <span> <i class="fa fa-calendar"></i> 2017-2019</span>
+    <span class="bullet"></span>
+    <span> <i class="fas fa-calendar-alt"></i> 2017-2019</span>
     <h4>WEB DESIGNER - ENVATO</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, libero fugit doloribus ad distinctio voluptas dolor id placeat esse, recusandae beatae quod cupiditate, exercitationem veniam ipsum praesentium dicta iure debitis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
 </div>
 <div class="item">
-    <span> <i class="fa fa-calendar"></i> 2017-2019</span>
+    <span class="bullet"></span>
+    <span> <i class="fas fa-calendar-alt"></i> 2017-2019</span>
     <h4>WEB DEVELOPER - TWITTER</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, libero fugit doloribus ad distinctio voluptas dolor id placeat esse, recusandae beatae quod cupiditate, exercitationem veniam ipsum praesentium dicta iure debitis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
 </div>
 <div class="item">
-    <span> <i class="fa fa-calendar"></i> 2017-2019</span>
+    <span class="bullet"></span>
+    <span> <i class="fas fa-calendar-alt"></i>2017-2019</span>
     <h4>CONSULTANT - GOOGLE</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, libero fugit doloribus ad distinctio voluptas dolor id placeat esse, recusandae beatae quod cupiditate, exercitationem veniam ipsum praesentium dicta iure debitis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
 </div>
 </div>
 <div class="col-6">
-    <h2>EDUCATION</h2>
+    <h2 style="padding: 30px 0px;">EDUCATION</h2>
     <div class="item">
-        <span> <i class="fa fa-calendar"></i> 2017-2019</span>
+        <span class="bullet"></span>
+        <span><i class="fas fa-calendar-alt"></i> 2017-2019</span>
         <h4>WEB DEVELOPER - TWITTER</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, libero fugit doloribus ad distinctio voluptas dolor id placeat esse, recusandae beatae quod cupiditate, exercitationem veniam ipsum praesentium dicta iure debitis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
     </div>
     <div class="item">
-        <span> <i class="fa fa-calendar"></i> 2017-2019</span>
+        <span class="bullet"></span>
+        <span> <i class="fas fa-calendar-alt"></i>2017-2019</span>
         <h4>WEB DEVELOPER - TWITTER</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, libero fugit doloribus ad distinctio voluptas dolor id placeat esse, recusandae beatae quod cupiditate, exercitationem veniam ipsum praesentium dicta iure debitis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
     </div>
     <div class="item">
-        <span> <i class="fa fa-calendar"></i> 2017-2019</span>
+        <span class="bullet"></span>
+        <span> <i class="fas fa-calendar-alt"></i> 2017-2019</span>
         <h4>WEB DEVELOPER - TWITTER</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, libero fugit doloribus ad distinctio voluptas dolor id placeat esse, recusandae beatae quod cupiditate, exercitationem veniam ipsum praesentium dicta iure debitis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
     </div>
 </div>
 </div>
@@ -111,7 +117,7 @@
 <div class="container-skills">
    
     <div class="col" >
-        <h2>SKILLS</h2>
+        <h2 style="margin: 50px 0px;">SKILLS</h2>
         <div class="skills">
     <div class="col4">
        <h4> HTML</h4>
