--- a/ProjectFrontEnd/MyPortfolio/about.html
+++ b/ProjectFrontEnd/MyPortfolio/about.html
@@ -91,19 +91,19 @@
 <div class="col-6">
     <h2 style="padding: 30px 0px;">EDUCATION</h2>
     <div class="item">
-        <span class="bullet"></span>
+        <span class="bulet"></span>
         <span><i class="fas fa-calendar-alt"></i> 2017-2019</span>
         <h4>WEB DEVELOPER - TWITTER</h4>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
     </div>
     <div class="item">
-        <span class="bullet"></span>
+        <span class="bulet"></span>
         <span> <i class="fas fa-calendar-alt"></i>2017-2019</span>
         <h4>WEB DEVELOPER - TWITTER</h4>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
     </div>
     <div class="item">
-        <span class="bullet"></span>
+        <span class="bulet"></span>
         <span> <i class="fas fa-calendar-alt"></i> 2017-2019</span>
         <h4>WEB DEVELOPER - TWITTER</h4>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet diam nonummy.</p>
@@ -117,17 +117,24 @@
 <div class="container-skills">
    
     <div class="col" >
-        <h2 style="margin: 50px 0px;">SKILLS</h2>
-        <div class="skills">
-    <div class="col4">
-       <h4> HTML</h4>
+        <h1 style="margin: 50px 0px;">SKILLS</h1>
+    <div class="skills" >
+             <div class="col4">
+                     <h4> HTML</h4>
+                     <img src="images/unnamed (2).png" alt="">
+             </div>
+
+            <div class="col4">
+                     <h4>CSS</h4>
+                     <img src="images/unnamed (1).png" alt="">
+            </div>
+
+             <div class="col4">
+                      <h4>JAVASCRIPT</h4>
+                      <img src="images/JavaScript.png" alt="" style="height: 80px;width: 150px;margin-left: 100px;">
+            </div>
+        </div>
     </div>
-    <div class="col4">
-        <h4>CSS</h4></div>
-    <div class="col4">
-        <h4>JAVASCRIPT</h4></div>
-</div>
-</div>
 </div>
 
 </div>
