--- a/ProjectFrontEnd/MyPortfolio/portfolio.html
+++ b/ProjectFrontEnd/MyPortfolio/portfolio.html
@@ -16,7 +16,7 @@
     <!-- Portfolio Section Starts -->
 <section id="portfolio">
     <div class="container-portfolio">
-        <div class="text"style=" text-align: center;">
+        <div class="text">
             <h2>MY <span style="color: #ffb400;">PORTFOLIO</span> </h2>
             <p>A FEW RECENT DESIGN AND CODING PROJECTS. WANT TO SEE MORE? EMAIL ME</p>
         </div>
@@ -27,6 +27,9 @@
               </div>
             <img src="img/project-2.jpg" alt="">
             <img src="img/project-4.jpg" alt="">
+            <img src="img/project-5.jpg" alt="">
+            <img src="img/project-6.jpg" alt="">
+            <img src="img/project-8.jpg" alt="">
             <img src="img/project-5.jpg" alt="">
             <img src="img/project-6.jpg" alt="">
             <img src="img/project-8.jpg" alt="">
