--- a/ProjectFrontEnd/Kidpay/index.html
+++ b/ProjectFrontEnd/Kidpay/index.html
@@ -697,8 +697,9 @@
 
             <div class="mail">
                 <input type="email" placeholder="Enter Your Email Address">
-                <div class="plane"><i class="fas fa-paper-plane"></i></div>
+                <i class="fas fa-paper-plane" style="position: absolute;top: 15px;right: 115px;"></i>
             </div>
+        
 
         </div>
     </section>
