--- a/Algorithms/Tasks-2/foot.html
+++ b/Algorithms/Tasks-2/foot.html
@@ -187,7 +187,7 @@
 </head>
 
 <body>
-    <footer></footer>
+    <footer>
     <div class="footer-container">
         <div class="row">
             <div class="col-3">
@@ -271,7 +271,7 @@
         </div>
 
     </div>
-
+</footer>
 
 
 
